hphp/test/zend/bad/ext-curl/curl_basic_014.php
<?php
  $ch = curl_init();
  var_dump($ch);
?>
===DONE===